fix: reduce custom scrollbar width for improved aesthetics

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body{
   }
 
   .custom-scrollbar::-webkit-scrollbar {
-    width: 16px;
+    width: 8px;
     height: 2px;
   }
 
